<resources>
    <string name="app_name">Ergasia-android-teliki</string>

    <string name="back_button">Back</string>

    <!--Login activity-->
    <string name="user_not_found">There\'s no user with this email</string>
    <string name="error_invalid_password">Incorrect password</string>
    <string name="login">Login</string>
    <string name="click_away_shop">Click away shop</string>
    <string name="enter_your_email">Your email</string>
    <string name="enter_your_password">Your password</string>
    <string name="please_enter_email">Please enter your email.</string>
    <string name="please_enter_password">Please enter your password.</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed_unknown">Login failed with unknown error</string>


    <!--Register activity-->
    <string name="error_weak_password">Password is weak</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_user_exists">User with this email already exists</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="registration_successful">Registration was successful!</string>
    <string name="register_failed_unknown">Registration failed with unknown error</string>

    <!--Main activity-->
    <string name="logoutBtn">Logout</string>
    <string name="choose_language">Choose language</string>
    <string name="shop_button">Shop</string>
    <string name="your_orders_button">Your orders</string>
    <string name="store_profile_button">Store Profile</string>

    <!--Shop activity-->
    <string name="add_to_cart_button">Add to cart</string>
    <string name="availability_text">Available: %1$s</string>
    <string name="product_price" translatable="false">%1$s €</string>
    <string name="added_to_cart">Added to cart</string>

    <!--Shopping cart activity-->
    <string name="cart_total">Total: %1$s€</string>

    <!--Order activity-->
    <string name="getting_location">Getting location</string>
    <string name="get_current_location">Get current location</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_loc_services_off">Location services are turned off!</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="complete_order">Complete Order</string>
    <string name="order_info_1">Select a store from the dropdown list below to see the available pickup hours for that store and how far it is from your location.</string>
    <string name="order_info_2">You can press the <b>Get current location</b> button to update the info based on your newest location.</string>
    <string name="distance_in_kilometers">This store is %1$s km away from you.</string>
    <string name="order_completed">Your order was completed!</string>
    <string name="order_complete_error">There was an error while completing your order.</string>
    <string name="continue_button">Continue</string>
    <string name="cart_is_empty">Cart is empty :(</string>
    <string name="view_cart">View cart</string>
    <string name="couldnt_get_location">Couldn\'t get your location</string>
    <string-array name="spinner_no_permission">
        <item>Please enable the location permission</item>
    </string-array>

    <!--Store profile activity-->
    <string name="orders_incoming_to_store">Incoming customers</string>
    <string name="user_items">User items:</string>
    <string name="user_id">Customer ID: %1$s</string>


</resources>