<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/shopBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/shop_button"
        app:icon="@drawable/shop_icon"
        app:layout_constraintBottom_toTopOf="@+id/storeProfileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/logoutBtn"
        app:icon="@drawable/logout_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeProfileBtn" />

    <Button
        android:id="@+id/storeProfileBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/store_profile_button"
        android:visibility="gone"
        app:icon="@drawable/store_icon"
        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>